‘第三次提交’

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 </head>
 
 <body>
+    <!-- 啦 -->
     <!-- 操作方法 -->
     <h1>git init </h1>
     <p>初始化git</p>
     <h1>git status</h1>
     <p>查看文件的状态</p>
     <h1>git add 文件路径</h1>
-
+    <p>文件的提交到中间仓库</p>
+    <h1>git commit -m</h1>
+    <p>文件提交到网上</p>
     <p></p>
 </body>
 
