--- a/demo.html
+++ b/demo.html
@@ -10,13 +10,18 @@
 <body>
     <h1>
         <!-- 创建分支 -->
-        <p>git branch 分支名 </p>
+        <p>git branch 分支名git </p>
         <!-- 查看分支 -->
         <p>git branch（*master 主分支默认只有一个）</p>
         <!-- 切换分支 -->
         <p>git checkout 分支名</p>
         <!-- 合并分支 -->
-
+        <!-- 1.先切换到主分支，在合并 -->
+        <!-- 2. git merge login分支名-->
+        <P>git merge 分支名</P>
+        <!-- 删除分支 -->
+        <!-- 分支不能自杀， -->
+        <p>git branch -d login</p>
     </h1>
 </body>
 
