login修改的分支

--- a/demo.html
+++ b/demo.html
@@ -20,8 +20,9 @@
         <!-- 2. git merge login分支名-->
         <P>git merge 分支名</P>
         <!-- 删除分支 -->
-        <!-- 分支不能自杀， -->
+        <!-- 分支不能自杀，master可以，但不推荐 -->
         <p>git branch -d login</p>
+        <!-- 分支冲突 -->
     </h1>
 </body>
 
