--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,11 @@
         <!-- 删除分支 -->
         <!-- 分支不能自杀，master可以，但不推荐 -->
         <p>git branch -d login</p>
-        <!-- 分支冲突 -->
+        <!-- git远程仓库 -->
+        <!-- git pull -->
+        <!-- git push -->
+        <!-- git clone -->
+        <!-- git remote -->
     </h1>
 </body>
 
