--- a/demo.html
+++ b/demo.html
@@ -25,8 +25,10 @@
         <!-- git远程仓库 -->
         <!-- git pull -->
         <!-- git push -->
+        <!-- 本地仓库提交远程仓库 -->
         <!-- git clone -->
         <!-- git remote -->
+        <!-- 啦啦啦 -->
     </h1>
 </body>
 
